package com.zjh.factory.simplefactory.pizzastore.pizza;

public class CheesePizza extends Pizza {
    @Override
    public void prepared() {
        System.out.println();
    }
}
